Mon Sep  3 13:48:13 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/man1/whatis.man1 (OPTIONS): Refer to whatis rather than
	  apropos in description of --manpath.

Mon Sep  3 13:45:30 BST 2007  Nicolas François  <nicolas.francois@centraliens.net>

	* man/man1/apropos.man1 (ENVIRONMENT): Remove stray space in
	  description of POSIXLY_CORRECT. Patch from Debian bug #281811.

Mon Sep  3 13:26:19 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (directory_table): Add Bulgarian -> CP1251 and
	  Vietnamese -> TCVN5712-1.
	* src/lexgrog.l (bg_name, vi_name): Add.

Mon Sep  3 12:15:55 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): Fix comment typos and
	  formatting.

Mon Sep  3 12:01:36 BST 2007  Colin Watson  <cjwatson@debian.org>

	* .bzrignore: Update for manual directory renaming.
	* GNUmakefile.in (nls_man): Likewise.

Mon Sep  3 11:56:58 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/de_DE.88591, man/es_ES.88591, man/fr_FR.88591,
	  man/it_IT.88591, man/ja_JP.eucJP: Rename to ...
	* man/de.UTF-8, man/es.UTF-8, man/fr.UTF-8, man/it.UTF-8,
	  man/ja.UTF-8: ... these. Recode all contents to UTF-8.
	* man/Makefile.in (NLS): Adjust directory search.
	* man/THANKS: Update credits.

Mon Sep  3 11:38:11 BST 2007  Colin Watson  <cjwatson@debian.org>

	Create and use databases for non-English manual hierarchies (Debian
	bug #29448). Extensive changes elsewhere to support this by means of
	better UTF-8 handling and knowledge of more languages.

	* src/check_mandirs.c (make_database_directory): New function.
	  (create_db, update_db): Use it.
	  (purge_missing): Check that the database exists before starting.
	* src/mandb.c (process_manpath): New function, split out from main.
	  Make the single_filename check aware that the file might be in a
	  per-locale subdirectory that we aren't processing right now.
	  (main): Use it. Move man_owner, purged, and strays to file scope.