@@ -1,3 +1,8 @@
+Mon Sep  3 14:34:06 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (add_nls_manpath): Handle the POSIX locale the same way
+	  as C.
+
 Mon Sep  3 13:48:13 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* man/man1/whatis.man1 (OPTIONS): Refer to whatis rather than
